<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_balance"
        android:textSize="20sp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount_hint"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnAddMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_money_button"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnSendMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_money_button"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnViewHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_history_button"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_button" />

</LinearLayout>